# w2p_docker_flake

./: .flakeignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  flake.nix  pyproject.toml
src/: cron.master
src/web2py/: anyserver.py  cli.py
src/web2py/applications/admin/sessions/00d/020/: 127.0.0.1-33fb6439-c087-4d74-b16f-68524cc03efb
src/web2py/applications/admin/sessions/0f5/0f3/: 127.0.0.1-75fa7b52-85ce-47b9-b30f-adc81320e457
