[project]
name = "sprint_planner"
version = "0.1.0"
description = "Simplified version of web2py web server"
authors = [
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-firestore (>=2.21.0,<3.0.0)",
    "twisted"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
web2py = "web2py.cli:web2py"
anyserver = "web2py.cli:anyserver"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
